test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/valid/extra_credit/label_static_var_same_name.plx
#  a static variable and label within the same function can share a name
#  (make sure we don't e.g. use the naming scheme "main.x" in both cases)
pub fn main(none) i32 {
    data x: i32 = 5
    jump x
    x = 0
    label x
    return x #  return 5
}
