test/tests/compiler/10_file-scope_variables_and_storage-class_specifiers/invalid_types/extra_credit/static_var_case.plx
# Can't use a static variable as a case in a switch statement

pub fn main(none) i32 {
    i: i32 = 0

    match 0 {
        -> i { return 0 }
    }
    return 0
}
